--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -678,7 +678,7 @@
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemProductName</key>
-			<string>iMac19,1</string>
+			<string>iMacPro1,1</string>
 			<key>SystemSerialNumber</key>
 			<string>C02YT0GFJV3Q</string>
 			<key>SystemUUID</key>
