--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -544,7 +544,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>agdpmod=pikera debug=0x100 keepsyms=1</string>
+				<string>-v agdpmod=pikera debug=0x100 keepsyms=1</string>
 				<key>prev-lang:kbd</key>
 				<string>en-US:0</string>
 				<key>csr-active-config</key>
