--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -702,6 +702,8 @@
 			<integer>0</integer>
 			<key>SetupDelay</key>
 			<integer>0</integer>
+			<key>ResetTrafficClass</key>
+			<false/>
 		</dict>
 		<key>ConnectDrivers</key>
 		<true/>
@@ -718,8 +720,6 @@
 			<false/>
 			<key>KeyForgetThreshold</key>
 			<integer>5</integer>
-			<key>KeyMergeThreshold</key>
-			<integer>2</integer>
 			<key>KeySupport</key>
 			<true/>
 			<key>KeySupportMode</key>
@@ -758,6 +758,8 @@
 			<key>UgaPassThrough</key>
 			<false/>
 			<key>ForceResolution</key>
+			<false/>
+			<key>GopPassThrough</key>
 			<false/>
 		</dict>
 		<key>ProtocolOverrides</key>
@@ -813,6 +815,8 @@
 			<false/>
 			<key>TscSyncTimeout</key>
 			<integer>0</integer>
+			<key>ActivateHpetSupport</key>
+			<false/>
 		</dict>
 		<key>ReservedMemory</key>
 		<array>
