--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -105,6 +105,10 @@
 				<integer>0</integer>
 				<key>TableSignature</key>
 				<data></data>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -205,6 +209,8 @@
 			<key>ProvideMaxSlide</key>
 			<integer>0</integer>
 			<key>AllowRelocationBlock</key>
+			<false/>
+			<key>ForceBooterSignature</key>
 			<false/>
 		</dict>
 		<key>Patch</key>
@@ -684,6 +690,21 @@
 			<key>GlobalConnect</key>
 			<false/>
 		</dict>
+		<key>AppleInput</key>
+		<dict>
+			<key>AppleEvent</key>
+			<string>Builtin</string>
+			<key>CustomDelays</key>
+			<string>Auto</string>
+			<key>KeyInitialDelay</key>
+			<integer>0</integer>
+			<key>KeySubsequentDelay</key>
+			<integer>5</integer>
+			<key>PointerSpeedDiv</key>
+			<integer>2</integer>
+			<key>PointerSpeedMul</key>
+			<integer>1</integer>
+		</dict>
 		<key>Audio</key>
 		<dict>
 			<key>AudioCodec</key>
@@ -769,8 +790,6 @@
 			<key>AppleBootPolicy</key>
 			<false/>
 			<key>AppleDebugLog</key>
-			<false/>
-			<key>AppleEvent</key>
 			<false/>
 			<key>AppleImageConversion</key>
 			<false/>
